--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -20,6 +20,14 @@ mixin model-list()
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +e.label Sort by
                     +selectbox('Date').__control
+                        +selectbox-control(name='sory-by')
+                            optgroup(label='Date')
+                                option(value='date-newest') Newest first
+                                option(value='date-oldest') Oldest first
+                            option(value='distance') Distance
+                            option(value='Rating') Rating
+                            option(value='Price') Price
+
                 +e.header-col.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob.hide-when-header-fixed
