--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -19,7 +19,7 @@ mixin model-list()
                     +heading(38970).H1 Independent
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +e.label Sort by
-                    +selectbox('Date').__control
+                    +selectbox.__control
                         +selectbox-control(name='sory-by')
                             optgroup(label='Date')
                                 option(value='date-newest') Newest first
