--- a/markup/components/footer/footer.pug
+++ b/markup/components/footer/footer.pug
@@ -15,7 +15,11 @@ mixin footer()
                         +col(4).footer__col.footer__col_half-mob.no-padding-top
                             +e.select
                                 +e.SPAN.heading._big City
-                                +selectbox('Los Angeles')._dark._small._default-text
+                                +selectbox._dark._small._default-text
+                                    +selectbox-control(name='city')
+                                        option(value='1') Los Angeles
+                                        option(value='2') New Your
+                                        option(value='3') Miami
                         +col(4).footer__col.hide-mob
                             +e.social
                                 +e.SPAN.heading Follow us
@@ -62,11 +66,18 @@ mixin footer()
                         +col(4).footer__col.footer__col_half-mob.no-padding-top
                             +e.select
                                 +e.SPAN.heading._big Language
-                                +selectbox('Los Angeles')._dark._small._default-text
+                                +selectbox._dark._small._default-text
+                                    +selectbox-control(name='city')
+                                        option(value='1') Los Angeles
+                                        option(value='2') New Your
+                                        option(value='3') Miami
                         +col(4).footer__col.footer__col_half-mob.no-padding-top
                             +e.select
                                 +e.SPAN.heading._big CY.
-                                +selectbox('DOL $')._dark._small._default-text
+                                +selectbox._dark._small._default-text
+                                    +selectbox-control(name='currency')
+                                        option(value='1') DOL $
+                                        option(value='2') EUR €
                         +col(4).footer__col.hide-desktop.footer__col_half-mob
                             +e.social
                                 +e.SPAN.heading Follow us
