--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -1,19 +1,63 @@
+.popup .filter > .container, .popup .filter-additional > .container
+    +below(768px)
+        padding-left: 31px
+        padding-right: 31px
+
 .filter
     display: flex
     padding: 24px 0
     border-bottom: 1px solid borderColor
 
-    .grid__col_three
-        +below(1104px)
-            width 50%
+    &__mobile-nav
+        display: flex
+        justify-content: center
+        border-bottom: 1px solid borderColor
+        padding-left: 31px
+        padding-right: 31px
 
         +below(768px)
-            width 100%
+            display: none
+
+        li
+            display: block
+            height: 60px
+            border-bottom: 2px solid transparent
+            margin-bottom: -1px
+
+            transition(border-color)
+
+            &:not(:last-child)
+                margin-right: 27px
+
+            &.active
+                border-bottom-color: mainColor
+
+                a
+                    color: mainColor
+        a
+            display: flex
+            align-items: center
+            width: 100%
+            height: 100%
+            text-decoration: none
+            font-size: 16px
+            letter-spacing: 1px
+            color: darkGreyColor
+            transition(opacity)
+
+    .grid__col_three, .grid__col_six
+        +below(1104px)
+            width 50%
 
     .grid__col_two
         +below(1104px)
             min-width 50%
             width auto
+
+
+    .grid__col, .grid__col_three, .grid__col_six, .grid__col_two
+        +below(768px)
+            width 100%
 
     &_additional
 
@@ -86,6 +130,10 @@
     background-color darkGreyColor
     padding: 15px 0
 
+    .rating-interactive
+        +below(768px)
+            margin-top: 21px
+
     &__keywords
 
         .grid__col
@@ -95,6 +143,8 @@
             +below(768px)
                 width auto
                 min-width 50%
+                +below(768px)
+                    width 100%
 
     &__services
 
@@ -102,6 +152,8 @@
             +below(991px)
                 width auto
                 min-width 50%
+                +below(768px)
+                    width 100%
 
     .accordion__content .grid:first-child
         margin-top: -24px
