--- a/markup/components/rating-interactive/rating-interactive.styl
+++ b/markup/components/rating-interactive/rating-interactive.styl
@@ -6,6 +6,9 @@
     padding-left: 1px
     padding-top: 1px
 
+    +below(400px)
+        flex-wrap: wrap
+
     &_dark
 
         & ^[0]__star
@@ -28,14 +31,15 @@
         font-size 16px
         font-weight 400
         text-transform uppercase
+        width: 100%
 
-        +below(768px)
-            position: absolute;
-            width: 100%;
-            border-top: 1px solid;
-            top: 62px;
-            left 0
-            height: 62px;
+        +below(400px)
+            width: 100%
+            height: 52px
+            order: 2
+            border: 1px solid borderColor
+            margin-top: -1px
+            margin-left: -1px
 
     &__star
         display: flex
