--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -24,6 +24,7 @@ block content
             +demo-link('model-list.html') 01_List_1
             +demo-link('model-list-no-models.html') 01_List_1_no models
             +demo-link('model-list-search-result.html') 01_List_8_search 2
+            +demo-link('model-list-help.html') 01_List_10_help
             +demo-link('#profile-popup')(data-popup-id='#profile-popup' data-action='show').js-toggle-popup 02_card_1
             +demo-link('#profile-call')(data-popup-id='#profile-call' data-action='show').js-toggle-popup 02_card/call
             +demo-link('#profile-qr')(data-popup-id='#profile-qr' data-action='show').js-toggle-popup 02_card/QR
