--- a/markup/pages/user-fill-profile8.pug
+++ b/markup/pages/user-fill-profile8.pug
@@ -23,7 +23,7 @@ block popups
     +select-city-popup
 
 block scripts
-    //script(src='%=static=%js/separate-js/ajax/fill-profile/step8.js')
+    script(src='%=static=%js/separate-js/ajax/fill-profile/step8.js')
 
 block footer
     +footer
