--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -45,6 +45,9 @@
         width: 100%
         margin-top: 16px
 
+    &__sections:not(:first-child)
+        margin-top: 40px
+
     &__section
 
         &_column
