--- a/markup/components/textarea/textarea.pug
+++ b/markup/components/textarea/textarea.pug
@@ -1,4 +1,4 @@
 mixin textarea(name, placeholder)
     +b.textarea&attributes(attributes)
-        +e.control(name=name placeholder=placeholder contenteditable)
+        +e.control(name=name placeholder=placeholder contenteditable='true')
             block
