--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -13,6 +13,7 @@ include ../components/profile-video-popup/profile-video-popup
 include ../components/profile-photo-popup/profile-photo-popup
 include ../components/auth-popup/auth-popup
 include ../components/map/map
+include ../components/model-map/model-map
 
 
 block header
@@ -33,7 +34,7 @@ block content
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 02_card/video popup
             +demo-link('agency-list.html') 03/List_agency_1
             +demo-link('agency.html') 03/List_agency_(2-3)
-            +demo-link('model-map.html') 04/Map_model 0
+            +demo-link('#model-map')(data-popup-id='#model-map' data-action='toggle').js-toggle-popup 04/Map_model 0
             +demo-link('user-settings.html') 06/Settings
             +demo-link('user-settings2.html') 06/Settings (2)
             +demo-link('user-settings-user.html') 06/User/Settings
@@ -79,9 +80,11 @@ block popups
     +profile-video-popup
     +profile-photo-popup
     +auth-popup
+    +model-map
 
 block scripts
     script(src='%=static=%js/separate-js/maps/profile-contacts.js')
+    script(src=`%=static=%js/separate-js/maps/model.js`)
     +map-scripts
 
 block footer
