--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -67,6 +67,9 @@ block content
             +demo-link('boost-account-success.html') 08/Boost my account/pay 2
             +demo-link('boost-account-payment2.html') 08/Boost my account/pay 3
             +demo-link('boost-account2.html') 08/Boost my account/pay 4
+            +demo-link('blog.html') 09/new 1
+            +demo-link('post.html') 09/new 2
+            +demo-link('terms.html') 09/terms
     +arrow-up
 
 block popups
