fix links terms

--- a/markup/components/terms/terms.pug
+++ b/markup/components/terms/terms.pug
@@ -9,18 +9,18 @@ mixin terms()
                 +e.sidebar
                     +list(true)
                         +list-item.active
-                            +list-button About Us
+                            +list-button(href='#') About Us
                         +list-item
-                            +list-button Privacy
+                            +list-button(href='#') Privacy
                         +list-item
-                            +list-button Contact Us
+                            +list-button(href='#') Contact Us
                     +list(true)
                         +list-item
-                            +list-button Ticketing system
+                            +list-button(href='#') Ticketing system
                         +list-item
-                            +list-button FAQ
+                            +list-button(href='#') FAQ
                         +list-item
-                            +list-button Safety and Security Tips
+                            +list-button(href='#') Safety and Security Tips
                 +e.content
                     +heading Terms
                     +text
