--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -138,6 +138,7 @@
         right: 7px
         opacity: 0
         transition(opacity)
+        fill: mainColor
 
     &__col:not(:first-of-type)
         margin-left: 12px
@@ -147,6 +148,9 @@
 
         &_search
             fill: darkGreyColor
+
+        &_currency
+            fill: mainColor
 
     &__heading
         display: block
