--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -30,6 +30,11 @@
             bottom: 4px
             right: 0
 
+        & ^[0]__list
+            white-space: nowrap
+            right: 0
+            width: initial
+
     &_default-text
         & ^[0]__value
             text-transform: initial;
