--- a/markup/components/boost-preview/boost-preview.styl
+++ b/markup/components/boost-preview/boost-preview.styl
@@ -225,6 +225,9 @@
                 .badges
                     opacity 0
 
+                .icon-button svg
+                    fill: #fff
+
             & ~ ^[0]__buttons
                 background-color mainColor
                 border-left-color transparent
