--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -34,6 +34,7 @@
             white-space: nowrap
             right: 0
             width: initial
+            left: initial
 
     &_default-text
         & ^[0]__value
@@ -101,6 +102,7 @@
             height: 9px
             fill: #fff
             transition(opacity)
+            margin-left: 24px
 
         &:hover
             & ^[0]__list_dropdown
