--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -289,7 +289,7 @@ mixin user-fill-profile-3
                                 +selectbox._full
                                     +selectbox-control(name='stars')
                                         - for (var i = 0; i <= 5; i++)
-                                        option(value=i)=`${i} h`
+                                            option(value=i)=`${i}`
                         +col(12)
                             +radio(false, 'incall-availability', 3) Club/Studio
                         +col(12)
@@ -378,32 +378,31 @@ mixin user-fill-profile-3
                     +col(4)
                         +selectbox
                             +selectbox-control(name='hours-to')
-                                +selectbox-control(name='hours-from')
-                                    option(value='0') 00:00
-                                    option(value='1') 01:00
-                                    option(value='2') 02:00
-                                    option(value='3') 03:00
-                                    option(value='4') 04:00
-                                    option(value='5') 05:00
-                                    option(value='6') 06:00
-                                    option(value='7') 07:00
-                                    option(value='8') 08:00
-                                    option(value='9') 09:00
-                                    option(value='10') 10:00
-                                    option(value='11') 11:00
-                                    option(value='12') 12:00
-                                    option(value='13') 13:00
-                                    option(value='14') 14:00
-                                    option(value='15') 15:00
-                                    option(value='16') 16:00
-                                    option(value='17') 17:00
-                                    option(value='18') 18:00
-                                    option(value='19') 19:00
-                                    option(value='20') 20:00
-                                    option(value='21') 21:00
-                                    option(value='22') 22:00
-                                    option(value='23') 23:00
-                                    option(value='24' selected) 24:00
+                                option(value='0') 00:00
+                                option(value='1') 01:00
+                                option(value='2') 02:00
+                                option(value='3') 03:00
+                                option(value='4') 04:00
+                                option(value='5') 05:00
+                                option(value='6') 06:00
+                                option(value='7') 07:00
+                                option(value='8') 08:00
+                                option(value='9') 09:00
+                                option(value='10') 10:00
+                                option(value='11') 11:00
+                                option(value='12') 12:00
+                                option(value='13') 13:00
+                                option(value='14') 14:00
+                                option(value='15') 15:00
+                                option(value='16') 16:00
+                                option(value='17') 17:00
+                                option(value='18') 18:00
+                                option(value='19') 19:00
+                                option(value='20') 20:00
+                                option(value='21') 21:00
+                                option(value='22') 22:00
+                                option(value='23') 23:00
+                                option(value='24' selected) 24:00
 
                 +col(4)
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
