--- a/markup/components/head/head.pug
+++ b/markup/components/head/head.pug
@@ -23,5 +23,6 @@ mixin head(data)
 
     link(rel="icon" type="image/x-icon" href="favicon.ico")
     script(src='%=static=%js/separate-js/jquery-3.2.1.min.js')
+    script(src=`https://maps.googleapis.com/maps/api/js?key=AIzaSyCb75twxWdJqfiHIVuKVReb-39Yo1EFQUQ`)
     script.
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
