--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -36,6 +36,9 @@
         &_darkGrey
             background-color darkGreyColor
 
+            &.active
+                background-color: mainColor
+
         &_white
             background-color: #fff
 
