--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -15,7 +15,7 @@
         padding-left: 31px
         padding-right: 31px
 
-        +below(768px)
+        +above(1024px)
             display: none
 
         li
