--- a/markup/components/rating-interactive/rating-interactive.styl
+++ b/markup/components/rating-interactive/rating-interactive.styl
@@ -31,7 +31,6 @@
         font-size 16px
         font-weight 400
         text-transform uppercase
-        width: 100%
 
         +below(400px)
             width: 100%
@@ -53,6 +52,7 @@
         border: 1px solid borderColor
         margin-left: -1px
         margin-top: -1px
+        flex-shrink: 0
 
         +below(768px)
             width 52px
