--- a/markup/components/filter/filter.pug
+++ b/markup/components/filter/filter.pug
@@ -442,7 +442,7 @@ mixin filter-extended(dark)
                     +col(3)
                         +button()(class=ApplyButtonModifier)._uppercase.__hide-additional Apply <span>(19405)</span>
                     +col(3)
-                        +button()(class=ResetButtonModifier)._uppercase.__hide-additional reset options
+                        +button()(class=ResetButtonModifier)._uppercase.__reset reset options
                     +col(3).grid__col_align_right.grid__col_align_right._push_right
                         +icon-button('filter-button', 21, 12, 'icon-button__icon icon-button__icon_fill')(
                             data-popup-id='#filter-extended',
