--- a/markup/components/model-list/model-list-no-models.pug
+++ b/markup/components/model-list/model-list-no-models.pug
@@ -28,7 +28,7 @@ mixin model-list()
                 +e.header-col.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob
-                    +button.A(href='#')._color_white._bg_darkGrey._uppercase.__control View on map
+                    +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
             +e.not-found
                 +e.not-found-content
                     +e.not-found-picture
