--- a/markup/components/model-list/model-list-search-result.pug
+++ b/markup/components/model-list/model-list-search-result.pug
@@ -28,7 +28,7 @@ mixin model-list()
                 +e.header-col.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob
-                    +button.A(href='#')._color_white._bg_darkGrey._uppercase.__control View on map
+                    +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
 
             +grid-masonry(4, '.model-preview').js-model-preview-grid
                 +model-preview([7, 7, 7], 'Megan', 20, 325, true)
