fix user-profile map

--- a/markup/pages/user-fill-profile.pug
+++ b/markup/pages/user-fill-profile.pug
@@ -24,6 +24,7 @@ block popups
     +select-city-popup
 
 block scripts
+    script(src='%=static=%js/separate-js/maps/user-profile-map.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/common.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step1.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step2.js')
