--- a/markup/pages/user-fill-profile4.pug
+++ b/markup/pages/user-fill-profile4.pug
@@ -24,8 +24,8 @@ block popups
     +select-city-popup
 
 block scripts
+    script(src='%=static=%js/separate-js/maps/user-profile-map.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step4.js')
-    +map-scripts
 
 block footer
     +footer
