--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -118,7 +118,7 @@
     &_dark
         background-color: darkGreyColor
 
-        & ^[0]__label
+        .field__label
             color: rgba(#fff, .35)
 
         .grid:not(:first-child)
